# CS205-CPP-Project2-CNN

./: CMakeLists.txt  CNN_CPP.cpp  CNN_CPP.h  Matrix.cpp  Matrix.hpp  face_binary_cls.cpp  main.cpp
